package view;

public interface Display {
	static public void display() {
		
	}
}
