package view;

public interface DisplayInfo extends Display{

}
