package view;

public interface DisplayMenu extends Display{

}
