package view;

public class EmailUpdateDisplay implements DisplayInfo {
	static public void display() {
		System.out.println("");
		System.out.println("Update Email");
		System.out.println("==============================================");
		System.out.print("Please input new email: ");
		System.out.println("==============================================");
		System.out.println("");
	}
}
