package view;
import java.util.ArrayList;
import java.util.InputMismatchException;
import java.util.Scanner;

public interface Input {
	
	static Scanner scan = new Scanner(System.in);
	
}
