package view;

public interface InputInt extends Input{
	
	public int getIntChoice();
	
}
