package view;

public interface InputString extends Input {
	
	public String getStringInput();
	
}
