@startuml

title __VIEW's Class Diagram__\n

  namespace  {
    namespace iew {
      class view.AppointmentOutcomeRecordDisplay {
          {static} + display()
      }
    }
  }
  

  namespace  {
    namespace iew {
      class view.DayChecker {
          - months : String[]
          + dayCheck()
          + getMonthIndex()
      }
    }
  }
  

  namespace  {
    namespace iew {
      interface view.Display {
          {static} + display()
      }
    }
  }
  

  namespace  {
    namespace iew {
      interface view.DisplayInfo {
      }
    }
  }
  

  namespace  {
    namespace iew {
      interface view.DisplayMenu {
      }
    }
  }
  

  namespace  {
    namespace iew {
      class view.DoctorDisplayMenu {
          {static} + display()
      }
    }
  }
  

  namespace  {
    namespace iew {
      class view.EmailUpdateDisplay {
          {static} + display()
      }
    }
  }
  

  namespace  {
    namespace iew {
      interface view.Input {
          {static} + scan : Scanner
      }
    }
  }
  

  namespace  {
    namespace iew {
      class view.InputDayChoice {
          + InputDayChoice()
          + getDay()
      }
    }
  }
  

  namespace  {
    namespace iew {
      interface view.InputInt {
          {abstract} + getIntChoice()
      }
    }
  }
  

  namespace  {
    namespace iew {
      class view.InputIntChoice {
          - numberOfChoice : int
          + InputIntChoice()
          + getIntChoice()
      }
    }
  }
  

  namespace  {
    namespace iew {
      class view.InputMonthChoice {
          - months : String[]
          + InputMonthChoice()
          + getMonth()
      }
    }
  }
  

  namespace  {
    namespace iew {
      class view.InputPrescriptionChoice {
          + InputPrescriptionChoice()
          + getPrescription()
      }
    }
  }
  

  namespace  {
    namespace iew {
      interface view.InputString {
          {abstract} + getStringChoice()
      }
    }
  }
  

  namespace  {
    namespace iew {
      class view.InputTimeChoice {
          - time : String[]
          + InputTimeChoice()
          + getTime()
      }
    }
  }
  

  namespace  {
    namespace iew {
      class view.InventoryDisplay {
          {static} + display()
      }
    }
  }
  

  namespace  {
    namespace iew {
      class view.PatientDisplayMenu {
          {static} + display()
      }
    }
  }
  

  namespace  {
    namespace iew {
      class view.PharmacistDisplayMenu {
          {static} + display()
      }
    }
  }
  

  namespace  {
    namespace iew {
      class view.PrescriptionDisplay {
          {static} + display()
      }
    }
  }
  

  namespace  {
    namespace iew {
      class view.ReplenishmentRequestMenu {
          {static} + display()
      }
    }
  }
  

  namespace  {
    namespace iew {
      class view.UpdatePresriptionStatusMenu {
          {static} + display()
      }
    }
  }
  

  view.AppointmentOutcomeRecordDisplay .up.|> view.DisplayInfo
  view.DoctorDisplayMenu .up.|> view.DisplayMenu
  view.EmailUpdateDisplay .up.|> view.DisplayInfo
  view.InputDayChoice -up-|> view.InputIntChoice
  view.InputIntChoice .up.|> view.InputInt
  view.InputMonthChoice -up-|> view.InputIntChoice
  view.InputPrescriptionChoice -up-|> view.InputIntChoice
  view.InputTimeChoice -up-|> view.InputIntChoice
  view.PatientDisplayMenu .up.|> view.DisplayMenu
  view.PharmacistDisplayMenu .up.|> view.DisplayMenu
  view.ReplenishmentRequestMenu .up.|> view.DisplayMenu
  view.UpdatePresriptionStatusMenu .up.|> view.DisplayMenu


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
